Rimozione TOTALE di riferimenti a REGENERATE PDF
